--- a/AutenticacaoAspNetMvc/Views/Shared/_Layout.cshtml
+++ b/AutenticacaoAspNetMvc/Views/Shared/_Layout.cshtml
@@ -20,10 +20,24 @@
                 @Html.ActionLink("Nome do aplicativo", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Início", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Sobre", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contato", "Contact", "Home")</li>
+                <ul class="nav navbar-nav navbar-right">
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                @User.Identity.Name<span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Alterar senha", "AlterarSenha", "Perfil")</li>
+                                <li>@Html.ActionLink("Sair", "Logout", "Autenticacao")</li>
+                            </ul>
+                        </li>
+                    }
+                    else
+                    {
+                        <li>@Html.ActionLink("Login", "Login", "Autenticacao")</li>
+                        <li>@Html.ActionLink("Cadastre-se", "Cadastrar", "Autenticacao")</li>
+                    }
                 </ul>
             </div>
         </div>
